--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -9,3 +9,9 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 #configuração do cliente web do banco H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+#configuração para mostrar o SQL no console
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
