--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,17 +1,14 @@
-spring.application.name=dscommerce
-
-spring.profiles.active=test
-spring.jpa.open-in-view=false
-
-#dados de conexão com o banco H2
+# dados de conexão com o banco H2
 spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-#configuração do cliente web do banco H2
+# configuração do cliente web do banco H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-#configuração para mostrar o SQL no console
+# configuração para mostrar o SQL no console
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
